[package]
name = "chirp8"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "alloc", "mem_extend"]
std = ["alloc"]
alloc = []
mem_extend = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
cfg-if = "1.0.0"
rand = {version = "0.8.5", features = ["small_rng"], default-features = false}

[dev-dependencies]
bmp = "0.5.0"
getopts = "0.2.21"
piston = "0.55.0"
piston2d-graphics = "0.44.0"
piston2d-opengl_graphics = "0.83.0"
piston_window = "0.131.0"
